--- a/src/app/book-statistic/book-statistic.component.html
+++ b/src/app/book-statistic/book-statistic.component.html
@@ -1,20 +1,37 @@
-<button (click)="showReadingActvt()" *ngIf="!isReadingClicked">Reading Activity</button>
-<button (click)="hideReadingInfo()"
-        *ngIf="isReadingClicked"
-        [ngClass]="{'active': isReadingClicked}">Hide reading info</button>
+<button (click)="activityClicked('reading')"
+        *ngIf="activityButton !== 'reading'">
+  Reading Activity
+</button>
 
-<button (click)="showCommentActvt()" *ngIf="!isCommentClicked">Comment Activity</button>
-<button (click)="hideCommentInfo()"
-        *ngIf="isCommentClicked"
-        [ngClass]="{'active': isCommentClicked}">Hide comment info</button>
+<button (click)="activityClicked('')"
+        *ngIf="activityButton === 'reading'"
+        [ngClass]="{'active': activityButton === 'reading'}">
+  Hide reading info
+</button>
 
-<button (click)="showRatingActvt()" *ngIf="!isRatingClicked">Rating Activity</button>
-<button (click)="hideRatingInfo()"
-        *ngIf="isRatingClicked"
-        [ngClass]="{'active': isRatingClicked}">Hide rating info</button>
+<button (click)="activityClicked('comment')"
+        *ngIf="activityButton !== 'comment'">
+  Comment Activity
+</button>
+
+<button (click)="activityClicked('')"
+        *ngIf="activityButton === 'comment'"
+        [ngClass]="{'active': activityButton === 'comment'}">
+  Hide comment info
+</button>
+
+<button (click)="activityClicked('rating')"
+        *ngIf="activityButton !== 'rating'">
+  Rating Activity
+</button>
+<button (click)="activityClicked('')"
+        *ngIf="activityButton === 'rating'"
+        [ngClass]="{'active': activityButton === 'rating'}">
+  Hide rating info
+</button>
 
 <!--READING ACTIVITY-->
-<div *ngIf="isReadingClicked">
+<div *ngIf="activityButton === 'reading'">
   <div *ngFor="let reading of readStatistic" class="single-info">
     <!--{{reading | json}}-->
     User <b>{{reading.User.name}}</b>
@@ -24,11 +41,11 @@
     <br>
     <b>{{reading.created_at | date}}</b>
   </div>
-  <button (click)="hideReadingInfo()">Hide reading info</button>
+  <button (click)="activityClicked('')">Hide reading info</button>
 </div>
 
 <!--COMMENT ACTIVITY-->
-<div *ngIf="isCommentClicked">
+<div *ngIf="activityButton === 'comment'">
   <div *ngFor="let comment of commentStatistic" class="single-info">
     <!--{{comment | json}}-->
     User <b>{{comment.User.name}}</b>
@@ -40,17 +57,17 @@
     <br>
     <b>{{comment.created_at | date}}</b>
   </div>
-  <button (click)="hideCommentInfo()">Hide comment info</button>
+  <button (click)="activityClicked('')">Hide comment info</button>
 </div>
 
 <!--RATING ACTIVITY-->
-<div *ngIf="isRatingClicked">
+<div *ngIf="activityButton === 'rating'">
   <div *ngFor="let rating of ratingStatistic" class="single-info">
     <!--{{rating | json}}-->
     User <b>{{rating.User.name}}</b> rate it on <b>{{rating.star}} </b> stars
     <br>
     <b>{{rating.created_at | date}}</b>
   </div>
-  <button (click)="hideRatingInfo()">Hide rating info</button>
+  <button (click)="activityClicked('')">Hide rating info</button>
 </div>
 
