--- a/src/app/all-books/all-books.component.css
+++ b/src/app/all-books/all-books.component.css
@@ -1,11 +1,16 @@
-.books-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
 .pagination {
   display: inline-block;
+  width: 20px;
   margin: 20px 5px;
+}
+
+select {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 0;
+}
+
+label {
+  font-size: 20px;
 }
