--- a/src/app/book/book.component.css
+++ b/src/app/book/book.component.css
@@ -1,3 +1,6 @@
+.bookInfo {
+  height: 100%;
+}
 .basicInfo {
   position: relative;
   width: 75%;
@@ -5,13 +8,12 @@
 }
 
 .statistic {
-  position: relative;
   width: 25%;
   float: left;
 }
 
 .image {
-  position: relative;
+  /*position: relative;*/
   width: 100%;
   height: 100%;
 }
@@ -61,13 +63,15 @@
 
 .allComments {
   margin-bottom: 60px;
+  position: relative;
 }
 
-.admin-panel>button {
+.admin-panel > button {
   margin: 20px;
   padding: 10px;
   background-color: #eeeeee;
 }
+
 .btn {
   margin-top: 20px;
 }
@@ -77,8 +81,17 @@ select {
   height: 34px;
 }
 
+textarea {
+  border: 0;
+  border-bottom: 1px solid #9e9e9e;
+}
+
+.comment {
+  width: 65%;
+}
+
 .active {
-  -webkit-box-shadow: 0px 0px 46px -1px rgba(58,167,186,1);
-  -moz-box-shadow: 0px 0px 46px -1px rgba(58,167,186,1);
-  box-shadow: 0px 0px 46px -1px rgba(58,167,186,1);
+  -webkit-box-shadow: 0px 0px 46px -1px rgba(58, 167, 186, 1);
+  -moz-box-shadow: 0px 0px 46px -1px rgba(58, 167, 186, 1);
+  box-shadow: 0px 0px 46px -1px rgba(58, 167, 186, 1);
 }
