--- a/src/app/books/small-book.component.css
+++ b/src/app/books/small-book.component.css
@@ -20,6 +20,14 @@
   display: block;
 }
 
+.fa-star {
+  color: #dbe028;
+}
+.fa-star:hover {
+  transform: rotate(-15deg) scale(1.3);
+  color: #dbe028;
+}
+
 .title {
   font-size: 1.5em;
 }
@@ -49,19 +57,6 @@
   visibility: visible;
 }
 
-.tooltiptext {
-  visibility: hidden;
-  width: 120px;
-  background-color: #5c5c5c;
-  color: #fff;
-  text-align: center;
-  border-radius: 6px;
-  padding: 5px 0;
-  font-size: 15px;
-  position: absolute;
-  z-index: 1;
-}
-
 fieldset, label {
   margin: 0;
   padding: 0;
@@ -70,50 +65,4 @@ fieldset, label {
 h1 {
   font-size: 1.5em;
   margin: 10px;
-}
-
-/****** Style Star Rating Widget *****/
-
-.rating {
-  border: none;
-  float: left;
-}
-
-.rating > input {
-  display: none;
-}
-
-.rating > label:before {
-  margin: 5px;
-  font-size: 1.25em;
-  font-family: FontAwesome;
-  display: inline-block;
-  content: "\f005";
-}
-
-.rating > .half:before {
-  content: "\f089";
-  position: absolute;
-}
-
-.rating > label {
-  color: #ddd;
-  float: right;
-}
-
-/***** CSS Magic to Highlight Stars on Hover *****/
-
-.rating > input:checked ~ label, /* show gold star when clicked */
-.rating:not(:checked) > label:hover, /* hover current star */
-.rating:not(:checked) > label:hover ~ label {
-  color: #FFD700;
-}
-
-/* hover previous stars in list */
-
-.rating > input:checked + label:hover, /* hover current star when changing rating */
-.rating > input:checked ~ label:hover,
-.rating > label:hover ~ input:checked ~ label, /* lighten current selection */
-.rating > input:checked ~ label:hover ~ label {
-  color: #FFED85;
 }
