--- a/src/app/top-books/top-books.component.css
+++ b/src/app/top-books/top-books.component.css
@@ -1,10 +1,4 @@
-.books-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-}
 .pagination {
   display: inline-block;
-  margin: 20px 5px;
+  margin: 0 5px;
 }
